--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: MRCE
 Type: Package
-Title: MRCE
-Version: 1.0
-Date: 2012-01-07
+Title: Multivariate regression with covariance estimation
+Version: 2.0
+Date: 2013-06-10
 Author: Adam J. Rothman
 Maintainer: Adam J. Rothman <arothman@umn.edu>
-Depends: R (>= 2.10.1), glasso, glmnet
+Depends: R (>= 2.10.1), QUIC
 Description: Multivariate regression with covariance estimation
-License: GPL (>= 3)
-LazyLoad: yes
-Packaged: 2012-01-08 01:45:43 UTC; adam
+License: GPL-2
+Packaged: 2013-06-10 17:45:37 UTC; arothman
+NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2012-01-08 02:06:22
+Date/Publication: 2013-06-11 00:36:49
